# snake

./: .gitignore  CMakeLists.txt  README.md  clang-format.txt
snake/: CMakeLists.txt  TODOs.txt  clang-format.txt
snake/extras/output/: snake_score.txt
snake/prj_cmake/: CMakeLists.txt
snake/src/: game.cpp  game.hpp  main.cpp
snake/src/arguments_parser/: arguments_parser.cpp  arguments_parser.hpp
snake/src/config/: constants.hpp
snake/src/controller/: controller.cpp  controller.hpp
snake/src/entities/: apple.cpp  apple.hpp  snake.cpp  snake.hpp
snake/src/output_file_logger/: output_file_logger.cpp  output_file_logger.hpp
snake/src/renderer/: renderer.cpp  renderer.hpp
snake/src/services/resource_manager/: resource_manager.cpp  resource_manager.hpp
snake/src/tools/logger/: logger.hpp
snake/src/tools/utils/: colors.cpp  colors.hpp  utils.cpp  utils.hpp
